--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -45,13 +45,14 @@
     font-size: 1.64rem
     line-height: 2.2rem
   .hero
+    max-height: 533px
     &__scroll-down
       display: none
     &__content
       width: 100%
     &__title
       max-width: 26rem
-      margin-top: 6rem
+      margin-top: 5.2rem
       font-size: 1.9rem
       line-height: 140%
     &__text
